testdata/baselines/reference/submodule/compiler/mergedModuleDeclarationCodeGen3.errors.txt
mergedModuleDeclarationCodeGen3.ts(6,9): error TS2304: Cannot find name 'buz'.


==== mergedModuleDeclarationCodeGen3.ts (1 errors) ====
    module my.data {
        export function buz() { }
    }
    module my.data.foo {
        function data(my, foo) {
            buz();
            ~~~
!!! error TS2304: Cannot find name 'buz'.
        }
    }